# a2a-opa

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
docs/: installation.md  policies.md
examples/client_opa_example/: README.md  main.py  policy.rego
examples/hello_world_opa/: Dockerfile  README.md  agent_executor.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_client.py
examples/hello_world_opa/policies/: data.json
src/a2a_opa/: __init__.py  client.py  context.py  exceptions.py  handler.py  policies.py
src/a2a_opa/client/: __init__.py  context.py  interceptor.py  opa_client.py
src/a2a_opa/server/: __init__.py
tests/: conftest.py  test_client.py  test_handler.py
