[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-opa"
version = "0.1.0"
description = "OPA (Open Policy Agent) integration for A2A (Agent-to-Agent) protocol"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "A2A-OPA Integration Team"}
]
keywords = ["a2a", "opa", "policy", "authorization", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "a2a-sdk>=0.2.16",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "uvicorn>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/your-org/a2a-opa"
Repository = "https://github.com/your-org/a2a-opa"
Documentation = "https://a2a-opa.readthedocs.io"
Issues = "https://github.com/your-org/a2a-opa/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_opa"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/a2a_opa --cov-report=term-missing"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pyyaml>=6.0.2",
    "ruff>=0.12.5",
    "uvicorn>=0.35.0",
]
